Mais uma alteração

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         .um-pouco {
             color: green;
             font-style: oblique;
+            font-size: 30px;
         }
         .hab {
             color: green;
@@ -61,9 +62,9 @@
     
     <ol><strong class="hab">Habilidades:</strong>
         <li class="faci">Facilidade em comunicação</li>
-        <li class="apren"> aprendizado</li>
-        <li class="trab">trabalho em equipe</li>
-        <li class="raci">raciocínio lógico</li>
+        <li class="apren">Aprendizado</li>
+        <li class="trab">Trabalho em equipe</li>
+        <li class="raci">Raciocínio Lógico</li>
     </ol>
     <a href="https://ghost-official.com/" target="_blank">Site da minha banda favorita</a>
     
