divisao html-css

--- a/index.html
+++ b/index.html
@@ -2,52 +2,11 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Web</title>
-    <style>
-        body {
-            background-color: lightgrey;
-        }
-        h1 {color: green; 
-            font-size: 70px;
-         }
-        h2 {color: green;
-        font-size: 50px;
-        font-style: oblique;
-        }
-        .p {
-            font-size: 35px;
-        }
-        .Trybe {
-            color: green;
-            font-style: oblique;
-        }
-        .um-pouco {
-            color: green;
-            font-style: oblique;
-            font-size: 30px;
-        }
-        .hab {
-            color: green;
-            font-style: oblique;
-            font-size: 40px;
-        }
-        .faci {
-            font-size: 35px;
-        }
-        
-        .apren {
-            font-size: 30px;
-        }
-        .trab {
-        font-size: 25px;
-        }
-        .raci {
-        font-size: 20px;
-        }
 
-    </style>
 </head>
 <body>
 
